@@ -9,6 +9,7 @@ Date: ????
     - Move model strength computer to shared
     - Store effects within blueprint tags
     - Add a remote interface through which to update beacons
+    - Set beacon effects based on blueprint tags
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.4
 Date: 2025. 01. 29
